# FastAPI_social_net

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-prod.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yaml
alembic/: env.py
alembic/versions/: 291164184221_create_posts_table.py  52b947c17085_add_user_table.py  606db55a893b_add_foreign_key_to_posts_table.py  63d62b51ae5b_add_content_column_to_posts_table.py  f4c56b2b1e43_autogenerate_vote_table.py  f9e15f270324_add_last_few_columns_to_posts_table.py
app/: config.py  config_paths.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
app/static/: index.html  styles.css
tests/: conftest.py  test_posts.py  test_users.py  test_votes.py
